manage to run on lapton

--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -46,7 +46,7 @@
 %********************************************************************
 % Bibliographies
 %*******************************************************
-\addbibresource{ultracold.bib, newbibthesis.bib}
+\addbibresource{ultracold.bib}
 %\addbibresource[label=ownpubs]{AMiede_Publications.bib}
 
 %********************************************************************
@@ -57,6 +57,8 @@
 % ********************************************************************
 % GO!GO!GO! MOVE IT!
 %*******************************************************
+%\usepackage[figuresonly,nolists,nomarkers]{endfloat}
+%\renewcommand{\processdelayedfloats}{}
 \begin{document}
 \frenchspacing
 \raggedbottom
@@ -100,7 +102,7 @@
 \include{Chapters/Chapter_pub3}
 \include{Chapters/Cpt5_DyK_feshbachplus}
 
-
+x
 
 \part{Making, probing, and understanding D\lowercase{y}K Feshbach molecules}\label{pt:MakingProbing}
 \include{Chapters/Cpt7_intro_feshbach_mol}
