- Sec 4.2 figures and structure

--- a/ultracold.bib
+++ b/ultracold.bib
@@ -24418,6 +24418,15 @@ and Windpassinger, Patrick},
   url    = {http://ultracold.at/theses/2023-kreyer.pdf},
 }
 
+
+@MastersThesis{Kreyer2017Master,
+	author = {Marian Kreyer},
+	school = {University of Innsbruck},
+	title  = {{Double-stage magneto-optical trap system for fermionic potassium atoms}},
+	year   = {2017},
+	url    = {http://www.ultracold.at/theses/2017-kreyer.pdf},
+}
+
 @Article{Zhang2020fas,
   author    = {Zhang, Jessie T. and Yu, Yichao and Cairncross, William B. and Wang, Kenneth and Picard, Lewis R. B. and Hood, Jonathan D. and Lin, Yen-Wei and Hutson, Jeremy M. and Ni, Kang-Kuen},
   journal   = {Phys. Rev. Lett.},
